force-app/main/default/objects/fileforcem1__File_Uploaded_Community__e/fileforcem1__File_Uploaded_Community__e.object-meta.xml
<CustomObject>
    <description>Platform event that is sent when large files are uploaded to SharePoint through community.</description>
    <label>File Uploaded Community</label>
    <pluralLabel>File Uploaded Community</pluralLabel>
</CustomObject>