force-app/main/default/objects/fileforcem1__File_Uploaded_Community__e/fields/fileforcem1__Document_Library__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Document_Library__c</fullName>
    <label>Document Library</label>
    <length>255</length>
    <type>Text</type>
</CustomField>