force-app/main/default/objects/fileforcem1__File_Uploaded_Community__e/fields/fileforcem1__File_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__File_Id__c</fullName>
    <label>File Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>