force-app/main/default/objects/fileforcem1__File_Uploaded_Community__e/fields/fileforcem1__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>