force-app/main/default/objects/fileforcem1__File_Uploaded_Community__e/fields/fileforcem1__Site__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Site__c</fullName>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>